@@ -3,12 +3,12 @@ package com.smarttruck.infrastructure.persistence;
 
 import com.smarttruck.domain.model.User;
 import com.smarttruck.domain.repository.UserRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Repository;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 import java.util.Optional;
 
 
@@ -42,14 +42,16 @@ public class JpaUserRepository implements UserRepository {
 
     @Override
     public Optional<User> findByEmail(String email) {
-        return springRepo.findByEmail(email)
-            .map(mapper::toDomain);
+        return springRepo.findByEmail(email).map(mapper::toDomain);
     }
+
     @Override
-    public List<User> findAll(){
-        return springRepo.findAll() // <-- Correção 1: usar "springRepo"
-            .stream()
-            .map(mapper::toDomain) // <-- Correção 2: usar "mapper" e "toDomain"
-            .collect(Collectors.toList());
+    public List<User> findAll() {
+        return springRepo.findAll().stream().map(mapper::toDomain).toList();
+    }
+
+    @Override
+    public Page<User> findAllActive(Pageable pageable) {
+        return springRepo.findAllActive(pageable).map(mapper::toDomain);
     }
 }
